--- a/nibas.html
+++ b/nibas.html
@@ -8,6 +8,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>I am Nibas </h1>
+        <h1> Hello Everyone </h1>
     </body>
     </html>
