--- a/nibas.html
+++ b/nibas.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -7,6 +8,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1> Hello, Good Morning </h1>
+        <h1> Hello Everyone </h1>
     </body>
     </html>
